# users-microservice

./: .env.TEMPLATE  .gitignore  Dockerfile  README.md  config.py  database.py  main.py  models.py  oauth2.py  pyproject.toml  schemas.py  test_main.py  utils.py
.github/workflows/: build-and-push-container.yml  test.yml
app/: config.py  database.py  endpoints.py  models.py  oauth2.py  schemas.py
scripts/: init-database.ps1  run-database.ps1
