[tool.poetry]
name = "micro-scale-users"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}
argon2-cffi = "^23.1.0"
pyjwt = "^2.10.1"
pydantic-settings = "^2.6.1"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.10"
sqlmodel = "^0.0.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
